# pcsc-fido

./: .gitignore  .syft.yaml  CMakeLists.txt  INSTALLATION.md  Makefile  NOTICE  README.md  RELEASE.md
.github/: CODEOWNERS  dependabot.yml  release-notes.md  trufflehog-exclude-paths  zizmor.yml
.github/actions/checkout-pinned/: PIN
.github/codeql/: codeql-config.yml
.github/linters/: .clang-format  ci-lint.sh  helper-codespell.sh  helper-cppcheck.sh  helper-license-headers.py  helper-markdownlint.sh
.github/pinned/codespell/: requirements.txt
.github/pinned/markdownlint/: package-lock.json  package.json
.github/scripts/: ci-bootstrap-container.sh  ci-codeql-build.sh  ci-run-tests.sh  ci-scan-build.sh  helper-bridge-service-install.sh  helper-build-tree-ownership.sh  helper-clean-build-tree.sh  helper-container-bind-mount.sh  helper-cross-targets.sh  helper-ensure-build-tree-owner.sh  helper-fuzz-probe.sh  helper-release-sha256sums.sh  helper-restore-bind-mount-ownership.sh  helper-spec-coverage-check.py  helper-spec-coverage-format.py  helper-tsan-probe.sh  install-built-tree.sh  install-cross-deps.sh  install-linux-deps.sh  install-post-linux.sh  release-build-package.sh  release-build-source.sh  release-render-notes.sh  release-verify-artifacts.sh  run-local-ci-suite.sh  run-local-container-matrix.sh  run-local-fuzz.sh  run-local-line-coverage.sh  run-local-openssf.sh  run-local-osv-scanner.sh  run-local-release-packages.sh  run-local-security-suite.sh  run-local-spec-coverage.sh  run-local-supply-chain.sh  run-local-trufflehog.sh  run-local-zizmor.sh  uninstall-built-tree.sh  verify-pcsc-integration.sh  verify-release-elf-hardening.sh  verify-systemd-unit.sh
.github/workflows/: codeql.yml  main-ci.yml  openssf-scorecard.yml  osv-scanner.yml  release.yml  supply-chain-sbom.yml  trufflehog.yml  zizmor.yml
cmake/: CompilerHardeningProbes.cmake  HostHardening.cmake  VerifyCompiler.cmake
cmake/toolchains/: linux-cross-armhf.cmake  linux-cross-common.cmake  linux-cross-ppc64el.cmake  linux-cross-riscv64.cmake  linux-cross-s390x.cmake
docs/: C-STYLE-CODEFLOW.md  CHECKLIST.md  DEBUGGING.md  ECOSYSTEM.md  REMEDIATIONS.md  spec-coverage.yaml
include/pcsc_fido/: apdu.h  apdu_chain.h  attrs.h  browser_daemon.h  card_monitor.h  cbor_util.h  ctaphid.h  daemon_config.h  daemon_hid.h  daemon_policy.h  daemon_rate_limit.h  daemon_request_handler.h  daemon_signals.h  daemon_uhid_loop.h  exchange_orchestrator.h  mem_util.h  pcsc_bridge.h  pcsc_bridge_debug.h  pcsc_bridge_limits.h  pcsc_err.h  pcsc_log.h  pcsc_reader_ops.h  pcsc_session.h  pcsc_util.h  reader_select.h  request_assembly.h  tap_arm.h  uhid_transport.h  version.h.in
packaging/debian/: control  rules
packaging/modules-load/: pcsc-fido-uhid.conf
packaging/polkit/: 50-pcsc-fido.rules
packaging/rpm/: pcsc-fido.spec
packaging/scripts/: ensure-pcsc-fido-user.sh  postinst  postrm  prerm
packaging/systemd/: 60-pcsc-fido.preset  pcsc-fido.conf  pcsc-fido.service
packaging/udev/: 70-pcsc-fido.rules
src/: apdu.c  apdu_chain.c  browser_daemon.c  card_monitor.c  cbor_util.c  ctaphid.c  daemon_config.c  daemon_hid.c  daemon_policy.c  daemon_rate_limit.c  daemon_request_handler.c  daemon_signals.c  daemon_uhid_loop.c  exchange_orchestrator.c  pcsc_bridge.c  pcsc_bridge_debug.c  pcsc_err.c  pcsc_log.c  pcsc_reader_ops.c  pcsc_session.c  reader_select.c  request_assembly.c  tap_arm.c  uhid_transport.c
tests/: mock_pcsc.c  mock_pcsc.h  stub_uhid_transport.c  test_apdu.c  test_apdu_chain.c  test_browser_daemon_cli.c  test_browser_daemon_loop.c  test_card_monitor.c  test_cbor_util.c  test_ctaphid.c  test_daemon_config.c  test_daemon_hid.c  test_daemon_policy.c  test_daemon_rate_limit.c  test_daemon_request_handler.c  test_daemon_uhid_loop.c  test_exchange_orchestrator.c  test_mem_util.c  test_pcsc_bridge.c  test_pcsc_session.c  test_reader_ops.c  test_reader_select.c  test_request_assembly.c  test_tap_arm.c  test_thread_safety.c  test_uhid_transport.c
tests/fuzz/: fuzz_apdu.c  fuzz_cbor_util.c  fuzz_request_assembly.c
